add: changing_the_contrast_and_brightness

--- a/changing_the_contrast_and_brightness_of_an_image/CMakeLists.txt
+++ b/changing_the_contrast_and_brightness_of_an_image/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(blending_two_images)
+project(changing_the_contrast_and_brightness_of_an_image)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # for clangd header 찾을 때
 
@@ -9,5 +9,5 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(OpenCV REQUIRED)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} changing_contrast_brightness_image.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS})
